// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildOSSFeatures returns the advancedSettings feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "config",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures returns the dashboard feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "management": Object {},
      "savedObject": Object {
        "all": Array [
          "dashboard",
          "url",
          "query",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "timelion-sheet",
          "canvas-workpad",
          "lens",
          "map",
        ],
      },
      "ui": Array [
        "createNew",
        "show",
        "showWriteControls",
        "saveQuery",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "timelion-sheet",
          "canvas-workpad",
          "map",
          "dashboard",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures returns the dev_tools feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures returns the discover feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [],
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "management": Object {},
      "savedObject": Object {
        "all": Array [
          "search",
          "query",
          "index-pattern",
          "url",
        ],
        "read": Array [],
      },
      "ui": Array [
        "show",
        "save",
        "saveQuery",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures returns the indexPatterns feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "index-pattern",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures returns the savedObjectsManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "foo",
          "bar",
        ],
        "read": Array [],
      },
      "ui": Array [
        "read",
        "edit",
        "delete",
        "copyIntoSpace",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "foo",
          "bar",
        ],
      },
      "ui": Array [
        "read",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures returns the timelion feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "timelion",
        "kibana",
      ],
      "catalogue": Array [
        "timelion",
      ],
      "savedObject": Object {
        "all": Array [
          "timelion-sheet",
        ],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "timelion",
        "kibana",
      ],
      "catalogue": Array [
        "timelion",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "timelion-sheet",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures returns the visualize feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "management": Object {},
      "savedObject": Object {
        "all": Array [
          "visualization",
          "query",
          "lens",
          "url",
        ],
        "read": Array [
          "index-pattern",
          "search",
        ],
      },
      "ui": Array [
        "show",
        "delete",
        "save",
        "saveQuery",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "query",
          "lens",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;
